cabal-version: 3.0

name:                   cardano-api-gen
version:                1.35.3
description:            The cardano api (gen) 
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-unix
  if !os(windows)
     build-depends:    unix


library 
  import:               base, project-config

  visibility:           public

  hs-source-dirs:       gen

  exposed-modules:      Gen.Cardano.Api
                        Gen.Cardano.Api.Metadata
                        Gen.Cardano.Api.Typed
                        Gen.Cardano.Crypto.Seed
                        Gen.Hedgehog.Roundtrip.Bech32
                        Gen.Hedgehog.Roundtrip.CBOR

  build-depends:        aeson             >= 1.5.6.0
                      , base16-bytestring
                      , bytestring
                      , cardano-api
                      , cardano-binary
                      , cardano-crypto-class
                      , cardano-crypto-test
                      , cardano-ledger-alonzo
                      , cardano-ledger-byron-test
                      , cardano-ledger-core
                      , cardano-prelude
                      , containers
                      , hedgehog
                      , plutus-core
                      , cardano-ledger-shelley
                      , text

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

test-suite cardano-api-test
  import:               base, project-config
  hs-source-dirs:       test
  main-is:              cardano-api-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        aeson             >= 1.5.6.0
                      , bytestring
                      , cardano-api
                      , cardano-api-gen
                      , cardano-binary
                      , cardano-crypto
                      , cardano-crypto-class
                      , cardano-crypto-test
                      , cardano-crypto-tests
                      , cardano-ledger-core
                      , cardano-prelude
                      , cardano-slotting
                      , containers
                      , hedgehog
                      , hedgehog-extras
                      , ouroboros-consensus
                      , ouroboros-consensus-shelley
                      , QuickCheck
                      , cardano-ledger-shelley
                      , cardano-ledger-shelley-test
                      , tasty
                      , tasty-hedgehog
                      , tasty-quickcheck
                      , tasty-th
                      , time

  other-modules:        Test.Cardano.Api.Crypto
                        Test.Cardano.Api.Genesis
                        Test.Cardano.Api.Json
                        Test.Cardano.Api.KeysByron
                        Test.Cardano.Api.Ledger
                        Test.Cardano.Api.Metadata
                        Test.Cardano.Api.Typed.Address
                        Test.Cardano.Api.Typed.Bech32
                        Test.Cardano.Api.Typed.CBOR
                        Test.Cardano.Api.Typed.Envelope
                        Test.Cardano.Api.Typed.JSON
                        Test.Cardano.Api.Typed.Ord
                        Test.Cardano.Api.Typed.Orphans
                        Test.Cardano.Api.Typed.RawBytes
                        Test.Cardano.Api.Typed.Script
                        Test.Cardano.Api.Typed.TxBody
                        Test.Cardano.Api.Typed.Value

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
