cabal-version: 3.0

name:                   cardano-api
version:                1.36.0
description:            The cardano api
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md

common base
  build-depends:        base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-unix
  if !os(windows)
     build-depends:    unix

library
  import:               base, project-config, maybe-unix

  hs-source-dirs:       src

  exposed-modules:      Cardano.Api
                        Cardano.Api.Byron
                        Cardano.Api.ChainSync.Client
                        Cardano.Api.ChainSync.ClientPipelined
                        Cardano.Api.Crypto.Ed25519Bip32
                        Cardano.Api.EraCast
                        Cardano.Api.Protocol.Types
                        Cardano.Api.Shelley
                        -- TODO: Eliminate in the future when
                        -- we create wrapper types for the ledger types
                        -- in this module
                        Cardano.Api.Orphans
                        Cardano.Api.SerialiseTextEnvelope

  other-modules:
                        -- Splitting up the big Typed module:
                        Cardano.Api.Address
                        Cardano.Api.Block
                        Cardano.Api.Certificate
                        Cardano.Api.Eras
                        Cardano.Api.Error
                        Cardano.Api.Fees
                        Cardano.Api.GenesisParameters
                        Cardano.Api.Hash
                        Cardano.Api.HasTypeProxy
                        Cardano.Api.IPC
                        Cardano.Api.IPC.Monad
                        Cardano.Api.InMode
                        Cardano.Api.Json
                        Cardano.Api.Key
                        Cardano.Api.KeysByron
                        Cardano.Api.KeysPraos
                        Cardano.Api.KeysShelley
                        Cardano.Api.LedgerEvent
                        Cardano.Api.LedgerState
                        Cardano.Api.Modes
                        Cardano.Api.NetworkId
                        Cardano.Api.OperationalCertificate
                        Cardano.Api.ProtocolParameters
                        Cardano.Api.Query
                        Cardano.Api.Script
                        Cardano.Api.ScriptData
                        Cardano.Api.SerialiseBech32
                        Cardano.Api.SerialiseCBOR
                        Cardano.Api.SerialiseJSON
                        Cardano.Api.SerialiseLedgerCddl
                        Cardano.Api.SerialiseRaw
                        Cardano.Api.SerialiseUsing
                        Cardano.Api.Shelley.Genesis
                        Cardano.Api.SpecialByron
                        Cardano.Api.StakePoolMetadata
                        Cardano.Api.Tx
                        Cardano.Api.TxBody
                        Cardano.Api.TxIn
                        Cardano.Api.TxMetadata
                        Cardano.Api.TxSubmit.ErrorRender
                        Cardano.Api.TxSubmit.Types
                        Cardano.Api.Utils
                        Cardano.Api.Value
                        Cardano.Api.ValueParser

  build-depends:        aeson                        >= 1.5.6.0   && <2.2
                      , aeson-pretty                 >= 0.8.5     && <0.9
                      , attoparsec                   >= 0.14.4    && <0.15
                      , array                        >= 0.5.4.0   && <0.6
                      , base16-bytestring            >= 1.0       && <1.1
                      , base58-bytestring            >= 0.1.0     && <0.2
                      , bech32                       >= 1.1.0     && <1.2
                      , bytestring                   >= 0.10.12.0 && <0.11
                      , cardano-binary               >= 1.5.0     && <1.6
                      , cardano-crypto               >= 1.1.0     && <1.2
                      , cardano-crypto-class         >= 2.0.0     && <2.1
                      , cardano-crypto-wrapper       >= 1.3.0     && <1.4
                      , cardano-data                 >= 0.1.0.0   && <0.2
                      , cardano-ledger-alonzo        >= 0.1.0.0   && <0.2
                      , cardano-ledger-babbage       >= 0.1.0.0   && <0.2
                      , cardano-ledger-byron         >= 0.1.0.0   && <0.2
                      , cardano-ledger-core          >= 0.1.0.0   && <0.2
                      , cardano-ledger-shelley-ma    >= 0.1.0.0   && <0.2
                      , cardano-prelude              >= 0.1.0.0   && <0.2
                      , cardano-protocol-tpraos      >= 0.1.0.0   && <0.2
                      , cardano-slotting             >= 0.1.0.0   && <0.2
                      , cborg                        >= 0.2.7.0   && <0.3
                      , contra-tracer                >= 0.1.0.0   && <0.2
                      , containers                   >= 0.6.5.1   && <0.7
                      , cryptonite                   >= 0.27      && <0.28
                      , deepseq                      >= 1.4.4.0   && <1.5
                      , directory                    >= 1.3.6.0   && <1.4
                      , filepath                     >= 1.4.2.1   && <1.5
                      , formatting                   >= 6.3.7     && <6.4
                      , iproute                      >= 1.7.12    && <1.8
                      , memory                       >= 0.17.0    && <0.18
                      , network                      >= 3.1.2.7   && <3.2
                      , nothunks                     >= 0.1.3     && <0.2
                      , optparse-applicative-fork    >= 0.16.1.0  && <0.17
                      , ouroboros-consensus          >= 0.1.0.0   && <0.2
                      , ouroboros-consensus-byron    >= 0.1.0.0   && <0.2
                      , ouroboros-consensus-cardano  >= 0.1.0.0   && <0.2
                      , ouroboros-consensus-protocol >= 0.1.0.0   && <0.2
                      , ouroboros-consensus-shelley  >= 0.1.0.0   && <0.2
                      , ouroboros-network            >= 0.1.0.0   && <0.2
                      , ouroboros-network-framework  >= 0.1.0.0   && <0.2
                      , parsec                       >= 3.1.14.0  && <3.2
                      , plutus-ledger-api            >= 1.0.0.0   && <1.1
                      , prettyprinter                >= 1.7.1     && <1.8
                      , prettyprinter-configurable   >= 0.1.0.0   && <0.2
                      , random                       >= 1.2.1.1   && <1.3
                      , scientific                   >= 0.3.7.0   && <0.4
                      , serialise                    >= 0.2.5.0   && <0.3
                      , small-steps                  >= 0.1.0.0   && <0.2
                      , cardano-ledger-shelley       >= 0.1.0.0   && <0.2
                      , stm                          >= 2.5.0.1   && <2.6
                      , strict-containers            >= 0.1.0.0   && <0.2
                      , text                         >= 1.2.4.1   && <1.3
                      , time                         >= 1.9.3     && <1.10
                      , transformers                 >= 0.5.6.2   && <0.6
                      , transformers-except          >= 0.1.2     && <0.2
                      , typed-protocols              >= 0.1.0.0   && <0.2
                      , unordered-containers         >= 0.2.11    && <0.3
                      , vector                       >= 0.12.3.1  && <0.13
                      , vector-map                   >= 0.1.0.0   && <0.2
                      , yaml                         >= 0.11.8.0  && <0.12

library gen
  import:               base, project-config

  visibility:           public

  hs-source-dirs:       gen

  exposed-modules:      Gen.Cardano.Api
                        Gen.Cardano.Api.Metadata
                        Gen.Cardano.Api.Typed
                        Gen.Cardano.Crypto.Seed
                        Gen.Hedgehog.Roundtrip.Bech32
                        Gen.Hedgehog.Roundtrip.CBOR

  build-depends:        aeson                     >= 1.5.6.0   && <2.2
                      , base16-bytestring         >= 1.0.2.0   && <1.1
                      , bytestring                >= 0.10.12.0 && <0.11
                      , cardano-api
                      , cardano-binary            >= 1.5.0     && <1.6
                      , cardano-crypto-class      >= 2.0.0     && <2.1
                      , cardano-crypto-test       >= 1.3.0     && <1.4
                      , cardano-ledger-alonzo     >= 0.1.0.0   && <0.2
                      , cardano-ledger-byron-test >= 1.3.0     && <1.4
                      , cardano-ledger-core       >= 0.1.0.0   && <0.2
                      , cardano-prelude           >= 0.1.0.0   && <0.2
                      , containers                >= 0.6.5.1   && <0.7
                      , hedgehog                  >= 1.1.1     && <1.2
                      , plutus-core               >= 1.0.0.0   && <1.1
                      , cardano-ledger-shelley    >= 0.1.0.0   && <0.2
                      , text                      >= 1.2.4.1   && <1.3

test-suite cardano-api-test
  import:               base, project-config
  hs-source-dirs:       test
  main-is:              cardano-api-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        aeson             >= 1.5.6.0
                      , bytestring
                      , cardano-api
                      , cardano-api:gen
                      , cardano-binary
                      , cardano-data
                      , cardano-crypto
                      , cardano-crypto-class
                      , cardano-crypto-test
                      , cardano-crypto-tests
                      , cardano-ledger-core
                      , cardano-prelude
                      , cardano-slotting
                      , containers
                      , hedgehog
                      , hedgehog-extras
                      , ouroboros-consensus
                      , ouroboros-consensus-shelley
                      , QuickCheck
                      , cardano-ledger-shelley
                      , cardano-ledger-shelley-test
                      , tasty
                      , tasty-hedgehog
                      , tasty-quickcheck
                      , time

  other-modules:        Test.Cardano.Api.Crypto
                        Test.Cardano.Api.Genesis
                        Test.Cardano.Api.Json
                        Test.Cardano.Api.KeysByron
                        Test.Cardano.Api.Ledger
                        Test.Cardano.Api.Metadata
                        Test.Cardano.Api.Typed.Address
                        Test.Cardano.Api.Typed.Bech32
                        Test.Cardano.Api.Typed.CBOR
                        Test.Cardano.Api.Typed.Envelope
                        Test.Cardano.Api.Typed.JSON
                        Test.Cardano.Api.Typed.Ord
                        Test.Cardano.Api.Typed.Orphans
                        Test.Cardano.Api.Typed.RawBytes
                        Test.Cardano.Api.Typed.Script
                        Test.Cardano.Api.Typed.TxBody
                        Test.Cardano.Api.Typed.Value

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
