cabal-version: 3.0

name:                   cardano-git-rev
version:                0.1.0.0
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     README.md

flag systemd
  description: Enable systemd support
  default:     True
  manual:      False

common base
  build-depends:        base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:               base, project-config

  hs-source-dirs:       src

  exposed-modules:      Cardano.Git.Rev
                        Cardano.Git.RevFromGit

  build-depends:        cardano-prelude  >= 0.1.0.0  && <0.2
                      , file-embed       >= 0.0.15.0 && <0.1
                      , process          >= 1.6.13.2 && <1.7
                      , template-haskell >= 2.16.0.0 && <2.17
                      , text             >= 1.2.4.1  && <1.3
