cabal-version: 3.0

name:                   cardano-node
version:                1.36.0
description:            The cardano full node
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-source-files:     ChangeLog.md

Flag unexpected_thunks
  Description:    Turn on unexpected thunks checks
  Default:        False

flag systemd
  description:    Enable systemd support
  default:        True
  manual:         False

common base
  build-depends:        base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
    build-depends:      Win32

common maybe-unix
  if !os(windows)
    build-depends:      unix

library
  import:               base, project-config
                      , maybe-unix
                      , maybe-Win32
  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  if os(linux) && flag(systemd)
    cpp-options: -DSYSTEMD
    build-depends:     lobemo-scribe-systemd
                     , systemd

  hs-source-dirs:      src

  exposed-modules:     Cardano.Node.Configuration.Logging
                       Cardano.Node.Configuration.NodeAddress
                       Cardano.Node.Configuration.POM
                       Cardano.Node.Configuration.Socket
                       Cardano.Node.Configuration.Topology
                       Cardano.Node.Configuration.TopologyP2P
                       Cardano.Node.Handlers.Shutdown
                       Cardano.Node.Handlers.TopLevel
                       Cardano.Node.Orphans
                       Cardano.Node.Protocol
                       Cardano.Node.Protocol.Alonzo
                       Cardano.Node.Protocol.Byron
                       Cardano.Node.Protocol.Cardano
                       Cardano.Node.Protocol.Shelley
                       Cardano.Node.Protocol.Types
                       Cardano.Node.Parsers
                       Cardano.Node.Queries
                       Cardano.Node.Run
                       Cardano.Node.STM
                       Cardano.Node.Startup
                       Cardano.Node.TraceConstraints
                       Cardano.Node.Tracing
                       Cardano.Node.Types
                       Cardano.Node.Tracing.API
                       Cardano.Node.Tracing.Compat
                       Cardano.Node.Tracing.Documentation
                       Cardano.Node.Tracing.Era.Byron
                       Cardano.Node.Tracing.Era.HardFork
                       Cardano.Node.Tracing.Era.Shelley
                       Cardano.Node.Tracing.Peers
                       Cardano.Node.Tracing.StateRep
                       Cardano.Node.Tracing.Tracers
                       Cardano.Node.Tracing.Tracers.BlockReplayProgress
                       Cardano.Node.Tracing.Tracers.ChainDB
                       Cardano.Node.Tracing.Tracers.Consensus
                       Cardano.Node.Tracing.Tracers.Diffusion
                       Cardano.Node.Tracing.Tracers.KESInfo
                       Cardano.Node.Tracing.Tracers.StartLeadershipCheck
                       Cardano.Node.Tracing.Tracers.ForgingThreadStats
                       Cardano.Node.Tracing.Tracers.Resources
                       Cardano.Node.Tracing.Tracers.Peer
                       Cardano.Node.Tracing.Tracers.Startup
                       Cardano.Node.Tracing.Tracers.Shutdown
                       Cardano.Node.Tracing.Tracers.P2P
                       Cardano.Node.Tracing.Tracers.NonP2P
                       Cardano.Node.Tracing.Tracers.NodeToClient
                       Cardano.Node.Tracing.Tracers.NodeToNode
                       Cardano.Node.Tracing.Formatting
                       Cardano.Node.Tracing.Render
                       Cardano.Tracing.Config
                       Cardano.Tracing.Metrics
                       Cardano.Tracing.Peer
                       Cardano.Tracing.Render
                       Cardano.Tracing.Startup
                       Cardano.Tracing.Shutdown
                       Cardano.Tracing.Tracers
                       Cardano.Tracing.OrphanInstances.Byron
                       Cardano.Tracing.OrphanInstances.Common
                       Cardano.Tracing.OrphanInstances.Consensus
                       Cardano.Tracing.OrphanInstances.HardFork
                       Cardano.Tracing.OrphanInstances.Network
                       Cardano.Tracing.OrphanInstances.Shelley

  other-modules:       Paths_cardano_node

  build-depends:        aeson                          >= 1.5.6.0   && <2.2
                      , async                          >= 2.2.4     && <2.3
                      , base16-bytestring              >= 1.0.2.0   && <1.1
                      , bytestring                     >= 0.10.12.0 && <0.11
                      , deepseq                        >= 1.4.4.0   && <1.5
                      , cardano-api
                      , cardano-data                   >= 0.1.0.0   && <0.2
                      , cardano-git-rev
                      , cardano-crypto-class           >= 2.0.0     && <2.1
                      , cardano-crypto-wrapper         >= 1.3.0     && <1.4
                      , cardano-ledger-alonzo          >= 0.1.0.0   && <0.2
                      , cardano-ledger-babbage         >= 0.1.0.0   && <0.2
                      , cardano-ledger-byron           >= 0.1.0.0   && <0.2
                      , cardano-ledger-core            >= 0.1.0.0   && <0.2
                      , cardano-ledger-shelley-ma      >= 0.1.0.0   && <0.2
                      , cardano-prelude                >= 0.1.0.0   && <0.2
                      , cardano-protocol-tpraos        >= 0.1.0.0   && <0.2
                      , cardano-slotting               >= 0.1.0.0   && <0.2
                      , cborg                          >= 0.2.4     && <0.3
                      , contra-tracer                  >= 0.1.0.0   && <0.2
                      , containers                     >= 0.6.5.1   && <0.7
                      , directory                      >= 1.3.6.0   && <1.4
                      , dns                            >= 3.0.4     && <3.1
                      , ekg                            >= 0.4.0.15  && <0.5
                      , ekg-core                       >= 0.1.1.7   && <0.2
                      , filepath                       >= 1.4.2.1   && <1.5
                      , generic-data                   >= 0.9.2.1   && <0.10
                      , hostname                       >= 1.0       && <1.1
                      , iproute                        >= 1.7.12    && <1.8
                      , io-classes                     >= 0.2.0.0   && <0.3
                      , iohk-monitoring                >= 0.1.11.0  && <0.2
                      , lobemo-backend-aggregation     >= 0.1.0.0   && <0.2
                      , lobemo-backend-ekg             >= 0.1.0.1   && <0.2
                      , lobemo-backend-monitoring      >= 0.1.0.0   && <0.2
                      , lobemo-backend-trace-forwarder >= 0.1.0.0   && <0.2
                      , network                        >= 3.1.2.7   && <3.2
                      , network-mux                    >= 0.1.0.0   && <0.2
                      , nothunks                       >= 0.1.3     && <0.2
                      , optparse-applicative-fork      >= 0.16.1.0  && <0.17
                      , ouroboros-consensus            >= 0.1.0.0   && <0.2
                      , ouroboros-consensus-byron      >= 0.1.0.0   && <0.2
                      , ouroboros-consensus-cardano    >= 0.1.0.0   && <0.2
                      , ouroboros-consensus-protocol   >= 0.1.0.0   && <0.2
                      , ouroboros-consensus-shelley    >= 0.1.0.0   && <0.2
                      , ouroboros-network              >= 0.1.0.0   && <0.2
                      , ouroboros-network-framework    >= 0.1.0.0   && <0.2
                      , psqueues                       >= 0.2.7.3   && <0.3
                      , safe-exceptions                >= 0.1.7.3   && <0.2
                      , scientific                     >= 0.3.7.0   && <0.4
                      , strict-stm                     >= 0.1.0.0   && <0.2
                      , cardano-ledger-shelley         >= 0.1.0.0   && <0.2
                      , small-steps                    >= 0.1.0.0   && <0.2
                      , stm                            >= 2.5.0.1   && <2.6
                      , text                           >= 1.2.4.1   && <1.3
                      , time                           >= 1.9.3     && <1.10
                      , tracer-transformers            >= 0.1.0.1   && <0.2
                      , trace-dispatcher
                      , trace-forward
                      , trace-resources
                      , transformers                   >= 0.5.6.2   && <0.6
                      , transformers-except            >= 0.1.2     && <0.2
                      , typed-protocols                >= 0.1.0.0   && <0.2
                      , yaml                           >= 0.11.8.0  && <0.12

executable cardano-node
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              cardano-node.hs
  ghc-options:          -threaded
                        -rtsopts

  if arch(arm)
    ghc-options:        "-with-rtsopts=-T -I0 -A16m -N1 --disable-delayed-os-memory-return"
  else
    ghc-options:        "-with-rtsopts=-T -I0 -A16m -N2 --disable-delayed-os-memory-return"

  other-modules:        Paths_cardano_node

  build-depends:        cardano-git-rev
                      , cardano-node
                      , cardano-prelude
                      , optparse-applicative-fork
                      , text

test-suite cardano-node-test
  import:               base, project-config
                      , maybe-unix
  hs-source-dirs:       test
  main-is:              cardano-node-test.hs
  type:                 exitcode-stdio-1.0

  build-depends:        aeson             >= 1.5.6.0
                      , cardano-api
                      , cardano-node
                      , cardano-prelude
                      , cardano-slotting
                      , directory
                      , hedgehog
                      , hedgehog-corpus
                      , iproute
                      , ouroboros-consensus
                      , ouroboros-network
                      , time

  other-modules:        Test.Cardano.Node.FilePermissions
                        Test.Cardano.Node.Gen
                        Test.Cardano.Node.Json
                        Test.Cardano.Node.POM

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
