cabal-version: 3.0

name:                   cardano-submit-api
version:                3.1.2
synopsis:               A web server that allows transactions to be POSTed to the cardano chain
description:
homepage:               https://github.com/input-output-hk/cardano-node
bug-reports:            https://github.com/input-output-hk/cardano-node/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019-2021 IOHK
category:               Language
build-type:             Simple
extra-source-files:     CHANGELOG.md

common base
  build-depends:        base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  ghc-options:          -Wall
                        -Wcompat
                        -Werror
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-all-missed-specialisations
                        -Wno-implicit-prelude
                        -Wno-missing-import-lists
                        -Wno-safe
                        -Wno-unsafe
                        -Wunused-packages

                        -XNoImplicitPrelude

                        -fwarn-incomplete-patterns
                        -fwarn-redundant-constraints

library
  import:               base, project-config
  build-depends:        aeson                       >= 2.1.0.0  && <2.2
                      , async                       >= 2.2.2    && <2.3
                      , bytestring                  >= 0.10.8.2 && <0.11
                      , cardano-api
                      , cardano-binary              >= 1.5.0    && <1.6
                      , cardano-crypto-class        >= 2.0.0    && <2.1
                      , cardano-ledger-byron        >= 0.1.0.0  && <0.2
                      , formatting                  >= 6.3.7    && <6.4
                      , http-media                  >= 0.8.0.0  && <0.9
                      , iohk-monitoring             >= 0.1.10.1 && <0.2
                      , mtl                         >= 2.2.2    && <2.3
                      , network                     >= 3.1.2.1  && <3.2
                      , optparse-applicative-fork   >= 0.16.1.0 && <0.17
                      , ouroboros-consensus-cardano >= 0.1.0.0  && <0.2
                      , ouroboros-network           >= 0.1.0.0  && <0.2
                      , prometheus                  >= 2.2.2    && <2.3
                      , protolude                   >= 0.3.0    && <0.4
                      , servant                     >= 0.18.2   && <0.20
                      , servant-server              >= 0.18.2   && <0.20
                      , streaming-commons           >= 0.2.2.1  && <0.3
                      , text                        >= 1.2.3.2  && <1.3
                      , transformers-except         >= 0.1.1    && <0.2
                      , warp                        >= 3.3.13   && <3.4
                      , yaml                        >= 0.11.5.0 && <0.12

  hs-source-dirs:       src

  exposed-modules:      Cardano.TxSubmit

  other-modules:        Cardano.TxSubmit.CLI.Parsers
                      , Cardano.TxSubmit.CLI.Types
                      , Cardano.TxSubmit.Config
                      , Cardano.TxSubmit.ErrorRender
                      , Cardano.TxSubmit.Metrics
                      , Cardano.TxSubmit.Rest.Parsers
                      , Cardano.TxSubmit.Rest.Types
                      , Cardano.TxSubmit.Rest.Web
                      , Cardano.TxSubmit.Tracing.ToObjectOrphans
                      , Cardano.TxSubmit.Types
                      , Cardano.TxSubmit.Util
                      , Cardano.TxSubmit.Web

executable cardano-submit-api
  import:               base, project-config
  build-depends:        cardano-submit-api
                      , optparse-applicative-fork
  main-is:              Main.hs
  hs-source-dirs:       app
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T -I0"

test-suite unit
  import:               base, project-config
  type:                 exitcode-stdio-1.0
  main-is:              test.hs
  hs-source-dirs:       test
