cabal-version: 3.0

name:                   cardano-testnet
version:                1.36.0
description:            The cardano full node
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple

common base
  build-depends:        base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:               base, project-config

  build-depends:        aeson                >= 2.1.0.0   && <2.2
                      , base16-bytestring    >= 1.0.2.0   && <1.1
                      , bytestring           >= 0.10.12.0 && <0.11
                      , cardano-api
                      , cardano-cli
                      , cardano-node
                      , cardano-slotting     >= 0.1.0.0   && <0.2
                      , containers           >= 0.6.5.1   && <0.7
                      , directory            >= 1.3.6.0   && <1.4
                      , exceptions           >= 0.10.4    && <0.11
                      , filepath             >= 1.4.2.1   && <1.5
                      , hedgehog             >= 1.1.1     && <1.2
                      , hedgehog-extras      >= 0.2.0.0   && <0.3
                      , http-client          >= 0.7.11    && <0.8
                      , http-types           >= 0.12.3    && <0.13
                      , ouroboros-network    >= 0.1.0.0   && <0.2
                      , process              >= 1.6.13.2  && <1.7
                      , random               >= 1.2.1.1   && <1.3
                      , resourcet            >= 1.2.6     && <1.3
                      , safe-exceptions      >= 0.1.7.3   && <0.2
                      , text                 >= 1.2.4.1   && <1.3
                      , time                 >= 1.9.3     && <1.10
                      , transformers         >= 0.5.6.2   && <0.6
                      , unordered-containers >= 0.2.19.1  && <0.3

  hs-source-dirs:       src
  exposed-modules:      Test.Assert
                        Test.Base
                        Test.Process
                        Test.Runtime
                        Testnet.Babbage
                        Testnet.Byron
                        Testnet.Cardano
                        Testnet.Conf
                        Testnet.List
                        Testnet.Shelley
                        Testnet.SubmitApi
                        Testnet.Utils

executable cardano-testnet
  import:               base, project-config

  hs-source-dirs:       testnet

  main-is:              Main.hs

  build-depends:        ansi-terminal
                      , cardano-git-rev
                      , cardano-testnet
                      , directory
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , optparse-applicative-fork
                      , resourcet
                      , stm
                      , text

  other-modules:        Paths_cardano_testnet
                        Testnet.Commands
                        Testnet.Commands.Babbage
                        Testnet.Commands.Byron
                        Testnet.Commands.Cardano
                        Testnet.Commands.Shelley
                        Testnet.Commands.Version
                        Testnet.Run

  autogen-modules:      Paths_cardano_testnet

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

test-suite cardano-testnet-tests
  import:               base, project-config

  hs-source-dirs:       test

  main-is:              Main.hs

  type:                 exitcode-stdio-1.0

  build-depends:        cardano-testnet
                      , aeson                         >= 2.1.0.0
                      , cardano-api
                      , cardano-cli
                      , containers
                      , directory
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , process
                      , tasty
                      , tasty-expected-failure
                      , tasty-hedgehog
                      , text
                      , time

  other-modules:
                        Spec.Cli.Alonzo.LeadershipSchedule
                        Spec.Cli.Babbage.LeadershipSchedule
                        Spec.Cli.KesPeriodInfo
                        Spec.Node.Shutdown
                        Spec.ShutdownOnSlotSynced
                        Testnet.Properties.Cli.KesPeriodInfo

                        Test.Util

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

  build-tool-depends:   cardano-node:cardano-node
                      , cardano-cli:cardano-cli
                      , cardano-submit-api:cardano-submit-api
